Updated Read Me Files and comments in the model

--- a/attrition.ipynb
+++ b/attrition.ipynb
@@ -5070,11 +5070,13 @@
         "  \n",
         "  b) Activation functions: By trying different activation functions, especially suited for branching and multi-task functions and comparing the results for accuracy and precision.\n",
         "\n",
-        "  **Optimization Techniques**: We can use appropriate optimization techniques that might improve the results. For e.g. conducting systematic hyperparameter tuning, including parameters such as learning rate, dropout rates, and network architecture hyperparameters, can lead to improved performance.\n",
+        "  **Optimization Techniques**: We can use appropriate optimization techniques that might improve the results. For e.g. conducting systematic hyperparameter tuning, including parameters such as learning rate, dropout rates, batch sizes, and network architecture hyperparameters, can lead to improved performance.\n",
         "\n",
         "  **Ensemble Methods**: Combining predictions from multiple individual models, either with different architectures or trained on different subsets of data, can often yield better performance than a single model.\n",
         "\n",
         "  **Improving Data Class Imbalance**:  By reducing the imbalance across various data classes might help imrove the results of the model\n",
+        "\n",
+        "  **Additional Features**:  we used 10 columns in our feature selection. By using additional columns in the feature dataset, and checking the features most contributing to the performance and output of the model, we can hope to improve the results.\n",
         "\n",
         "\n",
         "\n",
